# 02516_pothole_w3

./: .gitignore  pyproject.toml
nb/: CNN.ipynb  CNN_Martins.ipynb  Martins.ipynb  b-test.ipynb  mkl.ipynb  region_proposals.ipynb  selective-search.ipynb  train.ipynb
scripts/: fetch_data.py
src/pothole/: datasets.py  metrics.py  plot.py  prediction.py  training.py
src/pothole/boxes/: __init__.py  selective_search.py  util.py
src/pothole/models/: resnet.py
src/pothole/scripts/: convert_yaml_proposals_to_csv.py  generate_selective_search-proposals.py  generate_selective_search_proposals.py
