[project]

name = "pothole"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
  "ipympl",
  "matplotlib",
  "opencv-contrib-python",
  "torch",
  "pyyaml",
]

[build-system]

requires = ["setuptools >= 61.0"]

[project.scripts]

pothole-generate-selective-search-proposals = "pothole.scripts.generate_selective_search_proposals:main"
